crates/model/tests/compile_fail/model_duplicate_components.stderr
error: duplicate component name `Thing` — two components resolve to the same event enum variant
  --> tests/compile_fail/model_duplicate_components.rs:16:9
   |
16 |         Thing,
   |         ^^^^^
